pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: xxe-app
  labels:
    app: xxe
spec:
  containers:
  - name: xxe
    image: sharathwe45/xxe-app
    ports:
      - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: xxe-service
spec:
  type: NodePort
  selector:
    app: xxe
  ports:
  - protocol: TCP
    port: 80 # host port
    targetPort: 5000
