allow-particular-ip.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-this-ip
spec:
  podSelector: {}
  ingress:
  - from:
    - ipBlock:
        cidr: <ip>/32
  policyTypes:
  - Ingress
