database-allows-only-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-only
spec:
  podSelector:
    matchLabels:
      app: mysql-db
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: flask-app
      ports:
        - protocol: TCP
          port: 3306
